--- a/src/word/in/news/MainView.form
+++ b/src/word/in/news/MainView.form
@@ -24,11 +24,8 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Component id="pictureBoxPanel" min="288" pref="288" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-          </Group>
-          <Component id="subjectPanel" max="32767" attributes="0"/>
+          <Component id="subjectPanel" alignment="0" max="32767" attributes="0"/>
+          <Component id="pictureBoxPanel" alignment="0" min="288" pref="288" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
